SET(LIBRARY_OUTPUT_PATH ../../../lib/)
LINK_LIBRARIES(${GAUL_LIBRARIES} ${GAUL_UTIL_LIBRARIES})
ADD_LIBRARY(routing_darp SHARED darp.c darp.h darp_solver.cpp)
IF(WIN32)
  IF(MSVC)
    SET_TARGET_PROPERTIES(routing_darp PROPERTIES COMPILE_FLAGS "-DHAVE_GETHOSTNAME")
  ENDIF(MSVC)
ENDIF(WIN32)
MESSAGE("Installation directory for libraries is set to ${LIBRARY_INSTALL_PATH}")
INSTALL(TARGETS routing_darp DESTINATION ${LIBRARY_INSTALL_PATH})

