SET(LIBRARY_OUTPUT_PATH ../../../lib/)
LINK_LIBRARIES(${GAUL_LIBRARIES} ${GAUL_UTIL_LIBRARIES})
ADD_LIBRARY(routing_tsp SHARED tsp.c tsp.h tsp_solver.cpp)
IF(WIN32)
  IF(MSVC)
    SET_TARGET_PROPERTIES(routing_tsp PROPERTIES COMPILE_FLAGS "-DHAVE_GETHOSTNAME")
  ELSE(MSVC)
    SET_TARGET_PROPERTIES(routing_tsp PROPERTIES COMPILE_FLAGS "-DBUILDING_DLL")
    SET_TARGET_PROPERTIES(routing_tsp PROPERTIES LINK_FLAGS -Wl,--export-all-symbols)
  ENDIF(MSVC)
ENDIF(WIN32)
MESSAGE("Installation directory for libraries is set to ${LIBRARY_INSTALL_PATH}")
INSTALL(TARGETS routing_tsp DESTINATION ${LIBRARY_INSTALL_PATH})

